[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/Objects/Punch.gd" type="Script" id=1]
[ext_resource path="res://assets/Stock_Swing/Stock1.png" type="Texture" id=2]
[ext_resource path="res://assets/Stock_Swing/Stock2.png" type="Texture" id=3]
[ext_resource path="res://assets/Stock_Swing/Stock3.png" type="Texture" id=4]
[ext_resource path="res://assets/Stock_Swing/Stock4.png" type="Texture" id=5]
[ext_resource path="res://assets/Stock_Swing/Stock5.png" type="Texture" id=6]
[ext_resource path="res://assets/Stock_Swing/Stock6.png" type="Texture" id=7]
[ext_resource path="res://assets/sounds/BilliardSwing.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/sounds/BilliardHit.wav" type="AudioStream" id=9]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 9.78, 9.98, 0.88, 15.57, -8.26, 10.96, 0, 0 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 24.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 2 ) ],
"loop": true,
"name": "swing",
"speed": 24.0
} ]

[node name="Punch" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.141777, 0.19922 )
rotation = 4.46804
scale = Vector2( 2, 2 )
shape = SubResource( 1 )
one_way_collision_margin = 0.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 18.0654, -7.6697 )
rotation = 0.558505
scale = Vector2( 2, 2 )
frames = SubResource( 2 )
animation = "idle"
playing = true

[node name="BilliardSchwung" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="BilliardHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
